# nexus-bots

./: README.md
examples/bank-solver/: Cargo.toml
examples/bank-strategy/: Cargo.toml
examples/bank-strategy/src/: lib.rs
examples/cron/bank-cron/: Cargo.toml
examples/cron/bank-cron/src/: lib.rs
examples/cron/bank-event-based/: Cargo.toml  Makefile
examples/cron/bank-event-based/src/: lib.rs
examples/cron/compound-staking-cron/: Cargo.toml  Makefile
examples/cron/compound-staking-cron/src/: lib.rs
examples/cron/dummy-pool-cron/: Cargo.toml
examples/cron/dummy-pool-cron/src/: lib.rs
examples/cron/dumpsad-cron/: Cargo.toml  Makefile
examples/cron/dumpsad-cron/src/: astromesh.rs  events.rs  evm.rs  lib.rs  svm.rs  test.rs  wasm.rs
examples/cron/evm-deploy-watcher/: Cargo.toml  Makefile
examples/cron/evm-deploy-watcher/src/: lib.rs
examples/cron/jit-order-cron/: Cargo.toml
examples/cron/jit-order-cron/src/: astromesh.rs  evm.rs  lib.rs
examples/cron/jit-pool/: Cargo.toml
examples/cron/jit-pool/src/: astromesh.rs  evm.rs  lib.rs
examples/cron/pool-cron/: Cargo.toml
examples/cron/pool-cron/src/: lib.rs
examples/plane-solver/: Cargo.toml
examples/plane-solver/src/: lib.rs
examples/solver/amm-solver/: Cargo.toml  Makefile
examples/solver/amm-solver/src/: astromesh.rs  evm.rs  lib.rs  svm.rs  test.rs  wasm.rs
examples/solver/arbitrage/: Cargo.toml  Makefile
examples/solver/arbitrage/src/: astromesh.rs  evm.rs  lib.rs  svm.rs  test.rs  wasm.rs
examples/solver/drift-intent-solver/: Cargo.toml  Makefile
examples/solver/drift-intent-solver/src/: astromesh.rs  constants.rs  drift.rs  lib.rs  svm.rs
examples/solver/drift-solver/: Cargo.toml
examples/solver/drift-solver/src/: astromesh.rs  drift.rs  lib.rs  svm.rs  test.rs
examples/solver/dumpsad-solver/: Cargo.toml  Makefile
examples/solver/dumpsad-solver/src/: astromesh.rs  curve.rs  events.rs  interpool.rs  lib.rs  strategy.rs  svm.rs  test.rs
examples/solver/plane-util/: Cargo.toml
examples/solver/plane-util/src/: lib.rs
examples/solver/staking-solver/: Cargo.toml  Makefile
examples/solver/staking-solver/src/: astromesh.rs  lib.rs
examples/strategy/arbitrage/: Cargo.toml  Makefile
examples/strategy/arbitrage/src/: astromesh.rs  astroport.rs  evm.rs  fis.rs  lib.rs  svm.rs  test.rs  uniswap.rs  wasm.rs
src/: lib.rs
