[package]
name = "drift-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = "2.0.1"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
cosmwasm-schema = "2.0.1"
ed25519-dalek = "1.0"
bs58 = "0.4"
curve25519-dalek = "4.1.3"
sha2 = "0.10.8"
borsh = { version = "1.5.1", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
