[package]
name = "drift-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = "2.0.1"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
cosmwasm-schema = "2.0.1"
bs58 = "0.4"
sha2 = "0.10.8"
borsh = { version = "1.5.1", features = ["derive"] }
time = "0.3.36"
curve25519-dalek = "4.1.3"


[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
